# daily-news-assistant

./: .gitignore  AGENTS.md  README.md  config.yaml  config.yaml.example  feedback.yaml  feedback.yaml.example  main.py  pyproject.toml  quality_check.py  run_news.bat  temp prompt.md
tests/: test_report_pipeline.py
